# quant-4h-dual

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: paper_trading.yml  telegram_bot.yml  test_telegram.yml
experiments/analysis/: adopted_dual_breakdown.py  adx_tier_analysis.py  analyze_guarded_pullback_impact.py  regime_pnl_2025_analysis.py  regime_pnl_report.py
experiments/final/: compare_ma_kernel_variants.py  iterate_adopted_improvements.py  iterate_stop_cluster_improvements.py  search_guarded_pullback_conditional_filters.py  search_guarded_pullback_conditional_size_down.py  search_train_only_conditional_trend_long_guards.py  search_train_test_trend_long_guard_reentry_modes.py  validate_adopted_generalization.py  validate_adopted_rolling_windows.py  validate_state_gated_dual_overfit.py  verify_dynamic_v2.py  verify_main_preset.py  verify_state_gated_dual_combo.py  verify_virtual_live.py
research/: 00_index.md
research/archive/: ANTI_OVERFIT_GUARDRAIL_20260305.md  AUTONOMOUS_TREND_OPT_LOG_20260304.md  AUTONOMOUS_TREND_OPT_STAGE2_20260304.md  AUTONOMOUS_TREND_OPT_STAGE3_20260305.md  CHANGE_SUMMARY_2026-03-04.md  (+4 more)
scripts/: analyze_adopted_dual_breakdown.ps1  backtest_regime_only.ps1  install_editable.ps1  iterate_adopted_improvements.ps1  iterate_stop_cluster_improvements.ps1  paper_live_run.py  paper_live_stateful.py  run_adx_analysis.ps1  telegram_bot.py  validate_adopted_generalization.ps1  validate_adopted_rolling_windows.ps1  validate_overfit.ps1  verify_dual_combo.ps1  verify_dynamic_v2.ps1  verify_main_preset.ps1
(+52 files in other folders)
